# immich-python

./: .gitignore  .mise.toml  README.md  immich.py  pyproject.toml  run.sh
immich/: __main__.py
immich/lib/: config.py  export.py  fs.py  http.py  immich.py  logging.py
immich/lib/clients/: immich.py
lib/: immich.py
requirements/: dev-requirements.txt  requirements.txt
